# VINS

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/VINS-Mobile-master/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ios/: draw_result.cpp
app/libs/VINS-Mobile-master/msckf_mono/: CMakeLists.txt
app/libs/VINS-Mobile-master/msckf_mono/include/msckf_mono/: ros_interface.h
app/libs/VINS-Mobile-master/msckf_mono/src/: ros_interface.cpp
app/libs/VINS-Mobile-master/ov2slam/: CMakeLists.txt
app/libs/VINS-Mobile-master/ov2slam/include/: map_manager.hpp
app/libs/VINS-Mobile-master/ov2slam/src/: logger.cpp  map_manager.cpp  ov2slam.cpp  ov2slam_node.cpp
app/libs/magicpen/: CMakeLists.txt
app/libs/magicpen/include/: MagicPenMaLiang.h
app/libs/magicpen/src/: 4.1.texture.vs  MagicPen3DModel.cpp  MagicPen3DModel.h  MagicPenFeatureTrack.cpp  MagicPenFeatureTrack.h  MagicPenMaLiang.cpp  MagicPenMaLiang.h  MagicPenRender.cpp  MagicPenRender.h  MagicPenUtil.cpp  MagicPenUtil.h  dat_tracker.cpp  textures.cpp
app/libs/ov2slam/: CMakeLists.txt
app/libs/ov2slam/include/: logger.hpp  ov2slam.hpp
app/libs/ov2slam/src/: ov2slam.cpp  visual_front_end.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
app/src/main/cpp/jni/: magicpenlib.cpp  nativelib.cpp  ov2slamlib.cpp
app/src/main/java/com/example/vins/: CameraActivity.java  MagicPenDrawLineView.java  MagicPenJNI.java  MainActivity.java  MatrixState.java  VinsJNI.java  magicpenJNI.java  ov2slamJNI.java
app/src/main/java/com/example/vins/util/: LoggerConfig.java  ShaderHelper.java  TextResourceReader.java  TextureHelper.java
app/src/main/java/com/jscheng/scamera/render/: OriginalImageRenderDrawer.java  RecordRenderDrawer.java  RenderDrawerGroups.java  WaterMarkRenderDrawer.java
app/src/main/java/com/jscheng/scamera/util/: CameraUtil.java  PermisstionUtil.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
